<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4020.6">
  <DUT Name="ST_ActivatationError" Id="{ef013022-f682-4faf-8085-2bd5e4b1beef}">
    <Declaration><![CDATA[TYPE ST_ActivatationError :
STRUCT
	/// Set error, starting fbtimer counter
	xError: BOOL;
	/// time before error  
	TimeBeforError: TIME;
	///error level
	iNiveau: BYTE;
	/// error id 
	iId: DINT;
	/// error parameter 
	iIdParam: DINT;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>